lang/macro/tests/ui/contract/fail/32-no-interface-name.stderr
error: expected `name` parameter at `#[liquid::interface(..)]`
 --> $DIR/32-no-interface-name.rs:3:1
  |
3 | #[liquid::interface]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
